syntax = "proto3";

package app.users;

message UserResponse {
  string id = 1;

  string username = 2;
  string password = 3;

  string aboutMe = 4;
  string phoneNumber = 5;

  bool isDeleted = 6;

  string createdAt = 7;
  string updatedAt = 8;
}

service UsersService {
  rpc Create (CreateUserRequest) returns (UserResponse);
  rpc Update (UpdateUserRequest) returns (UserResponse);
  rpc FindById (FindUserRequest) returns (UserResponse);
  rpc Find (FindUsersRequest) returns (stream UserResponse);
  rpc Delete (DeleteUserRequest) returns (UserResponse);
  rpc Destroy (DestroyUserRequest) returns (UserResponse);
  rpc Login (LoginUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  optional string aboutMe = 3;
  optional string phoneNumber = 4;
}

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string password = 3;
  optional string aboutMe = 4;
  optional string phoneNumber = 5;
}

message FindUserRequest {
  string id = 1;
}

message FindUsersRequest {
  int32 limit = 1;
  optional string bookmark = 2;
}

message DeleteUserRequest {
  string id = 1;
}

message DestroyUserRequest {
  string id = 1;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}
